# spacy-huggingface-hub

./: .gitignore  LICENSE  README.md  __init__.py  requirements.txt  setup.cfg  setup.py
spacy_huggingface_hub/: __init__.py  push.py  push_cli.py
src/spacy_huggingface_hub/: __init__.py  push_cli.py
