[metadata]
version = 0.0.8
description = Quickly push your spaCy pipelines to the Hugging Face Hub
url = https://spacy.io
author = Explosion and Hugging Face
author_email = omar@huggingface.co
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
install_requires =
    huggingface_hub>=0.8.1
    wasabi>=0.8.1,<1.2.0
    typer>=0.3.0,<0.8.0
    PyYAML

[options.entry_points]
# This is a sneaky lie: we're only doing this to get spaCy to import the
# package, so that it installs our CLI extension.
spacy_cli =
    huggingface-hub = spacy_huggingface_hub.push:huggingface_hub_push_cli

[flake8]
ignore = E203, E266, E501, E731, W503
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,
